examples/test/testpolicy12086.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12086
  namespace: namespace10
spec:
  podSelector:
    matchLabels:
      key41: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value42
          key4: value45
          key7: value36
      podSelector:
        matchLabels:
          key4: value17
